docker first: dockerfile and docker-compose.yml